--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#0d47a1</color>
     <color name="colorAccent">#5472d3</color>
     <color name="colorPrimaryDark">#002171</color>
+    <color name="white">#FFFFFF</color>
 </resources>
