--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_menu_schedule"
-            android:title="Schedule" />
+            android:title="@string/nav_schedule" />
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/ic_menu_calendar"
-            android:title="Calendar" />
+            android:title="@string/nav_calendar" />
         <item
             android:id="@+id/nav_attendance"
             android:icon="@drawable/ic_menu_attendance"
-            android:title="Attendance" />
+            android:title="@string/nav_attendance" />
 
     </group>
 
-    <item android:title="Account">
+    <item android:title="@string/nav_group_account">
         <menu>
             <item
                 android:id="@+id/nav_sign_out"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Sign out" />
+                android:title="@string/nav_sign_out" />
 
         </menu>
     </item>
