--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -21,7 +21,7 @@
         <menu>
             <item
                 android:id="@+id/nav_sign_out"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/ic_menu_logout"
                 android:title="@string/nav_sign_out" />
 
         </menu>
