--- a/app/src/main/res/layout/nav_toolbar.xml
+++ b/app/src/main/res/layout/nav_toolbar.xml
@@ -2,10 +2,10 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/colorPrimaryDark"
     android:fitsSystemWindows="true"
     android:minHeight="?attr/actionBarSize"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:titleTextColor="@color/white"
-    android:background="?attr/colorPrimaryDark"></android.support.v7.widget.Toolbar>
+    app:titleTextColor="@color/white" />
