--- a/app/src/main/res/layout/tab_fragment_layout.xml
+++ b/app/src/main/res/layout/tab_fragment_layout.xml
@@ -14,7 +14,7 @@
         app:tabSelectedTextColor="@android:color/holo_orange_light"
         app:tabTextColor="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="wrap_content" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
