--- a/app/src/main/res/layout/lecture_card.xml
+++ b/app/src/main/res/layout/lecture_card.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="?android:attr/selectableItemBackground">
 
     <FrameLayout
         android:layout_width="52dp"
