--- a/app/src/main/res/drawable/register_attendance_button.xml
+++ b/app/src/main/res/drawable/register_attendance_button.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/colorPrimary" />
 
     <corners android:radius="25dp" />
 
     <stroke
         android:width="1dp"
-        android:color="#FFF" />
+        android:color="@color/colorPrimary" />
 
     <padding
         android:bottom="0dp"
