--- a/app/src/main/res/layout/activity_main_lecturer.xml
+++ b/app/src/main/res/layout/activity_main_lecturer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/drawer_layout_lecturer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
