--- a/app/src/main/res/layout/lecturers_info_fragment.xml
+++ b/app/src/main/res/layout/lecturers_info_fragment.xml
@@ -19,54 +19,11 @@
         android:textSize="30sp"
         app:layout_constraintVertical_bias="0.28" />
 
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/info_lecturer_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/info_lecture_name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="@dimen/card_margin_top"
-        android:layout_marginEnd="2dp"
-        android:paddingBottom="10dp"
-        app:cardCornerRadius="10dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/info_lecturer_card"
-            android:layout_alignStart="@+id/info_lecturer_card"
-            android:elevation="2dp"
-            android:padding="16dp">
-
-
-            <TextView
-                android:id="@+id/lecturer_card_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:paddingBottom="5dp"
-                android:text="@string/lecturer_card_title"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/info_lecturer_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/lecturer_card_title"
-                android:layout_centerHorizontal="true"
-                android:text="Mr Lecturer" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-
     <android.support.v7.widget.CardView
         android:id="@+id/info_location_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/info_lecturer_card"
+        android:layout_below="@+id/info_lecture_name"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="2dp"
         android:layout_marginTop="@dimen/card_margin_top"
@@ -99,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/location_card_title"
                 android:layout_centerHorizontal="true"
-                android:text="69 gaffistan, Seshlihem" />
+                android:text="location" />
 
         </RelativeLayout>
 
@@ -149,7 +106,7 @@
 
 
     <Button
-        android:id="@+id/register_attendance_button"
+        android:id="@+id/change_room_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/info_time_card"
@@ -161,15 +118,31 @@
         android:background="@drawable/register_attendance_button"
         android:padding="10dp"
         android:shadowColor="@android:color/transparent"
-        android:text="@string/info_register_attendance"
+        android:text="@string/change_room_button"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/info_map_frame" />
+
+    <TextView
+        android:id="@+id/spinner_text_building"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="150dp"
+        android:text="@string/info_spinner_building"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/spinner_building"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/spinner_text_building"
+        android:layout_toEndOf="@+id/spinner_text_building" />
 
     <FrameLayout
         android:id="@+id/info_map_frame"
         android:layout_width="match_parent"
         android:layout_height="316dp"
-        android:layout_below="@+id/register_attendance_button"
+        android:layout_below="@+id/change_room_button"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
